--- a/M2/M2D8/UPLOAD SU GITHUB/50ex/style.css
+++ b/M2/M2D8/UPLOAD SU GITHUB/50ex/style.css
@@ -22,10 +22,10 @@ a {
     border-radius: 18px;
 }
 
-p{
+/* p{
 margin: 30px;
 display: none;
-}
+} */
 td{
     border: 1px solid green;
     border-bottom: 1px dotted red;
