--- a/M4/M4D2/UPLOAD SU GITHUB/Template Spotify/style.css
+++ b/M4/M4D2/UPLOAD SU GITHUB/Template Spotify/style.css
@@ -229,3 +229,28 @@ ul {
 .mainPage img {
   width: 200px;
 }
+
+
+.card-container{
+width: 250px;
+min-height: 320px;
+background-color: rgba(229, 228, 228, 0.853);
+margin: 2rem;
+border-radius: 20px;
+text-align: center;
+}
+.card-img{
+min-height: 150px;
+background-position: center center;
+background-repeat: no-repeat;
+background-size: cover;
+border-radius: 20px 20px 0px 0px;
+}
+
+.card-title, .card-info, .card-album{
+color: rgb(83, 77, 77);
+}
+.card-title{
+font-size: 24pt;
+margin-top: 0.5rem;
+}
