--- a/M4/M4D8/UPLOAD SU GITHUB/style.css
+++ b/M4/M4D8/UPLOAD SU GITHUB/style.css
@@ -5,9 +5,15 @@ text-align: center;
 #mainContainer {
     background-color: beige;
     border-radius: 30px 30px;
-    min-height: 350px;
+    height: auto;
 }
 
+#editContainer {
+background-color: beige;
+border-radius: 20px 20px;
+height: auto;
+
+}
 #nameBrand #nameProduct {
 color: blue
 
