--- a/M5/M5D8/UPLOAD SU GITHUB/EpiBooksNavigation/navigationepibooks/src/App.css
+++ b/M5/M5D8/UPLOAD SU GITHUB/EpiBooksNavigation/navigationepibooks/src/App.css
@@ -37,3 +37,16 @@
     transform: translateY(0px);
   }
 }
+
+.c-card {
+  img {    
+    transition: transform .3s ease-in-out; 
+  }
+  
+  &:hover {
+    img {
+      transform: scale(1.05)
+    }
+  }
+}
+
