--- a/M5/M5D8/UPLOAD SU GITHUB/EpiBooksNavigation/navigationepibooks/src/index.css
+++ b/M5/M5D8/UPLOAD SU GITHUB/EpiBooksNavigation/navigationepibooks/src/index.css
@@ -16,6 +16,11 @@ code {
 @tailwind components;
 @tailwind utilities;
 
-#CardBook:hover {
+#CardBook {
+max-height: 500px;
+}
+
+#CardImg {
+max-height: 180px;
 
 }
